Sun Jun 14 15:30:38 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_IDL_Graph.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_IDL_Node.h:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/BE_IDL_Node.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/opensplice/IDL_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/opensplice/Project_Generator.cpp:
        * MDE/GME/paradigms/PICML/interpreter/CUTS_PICML/be/arch/opensplice/Servant_Generator.cpp:

          . Fixed more bugs/inconsistencies in the bug generator.

        * examples/arch/opensplice/SimpleExample/ModelDDSData_DDS.idl:
        * examples/arch/opensplice/SimpleExample/OpenSplice_ModelDDSDataC.cpp:
        * examples/arch/opensplice/SimpleExample/OpenSplice_SimpleComponent_svnt.h:
        * examples/arch/opensplice/SimpleExample/OpenSplice_SimpleComponent_svnt.cpp:
        * examples/arch/opensplice/SimpleExample/SimpleComponent.cidl:
        * examples/arch/opensplice/SimpleExample/SimpleComponent.idl:
        * examples/arch/opensplice/SimpleExample/SimpleComponent_Basic_Impl.h:
        * examples/arch/opensplice/SimpleExample/SimpleComponent_Basic_Impl.mpc:
        * examples/arch/opensplice/SimpleExample/SimpleComponent_Basic_Impl.cpp:

          . Re-generated the example.

Sat Jun 13 23:35:54 UTC 2009  James H. Hill  <hillj@dre.vanderbilt.edu>

        * examples/arch/opensplice/SimpleExample/ModelDDSData_DDS.idl:
        * examples/arch/opensplice/SimpleExample/OpenSplice_SimpleComponent_svnt.h:
        * examples/arch/opensplice/SimpleExample/OpenSplice_SimpleComponent_svnt.cpp:
        * examples/arch/opensplice/SimpleExample/SimpleComponent_Base.mpc:
        * examples/arch/opensplice/SimpleExample/SimpleComponent_Basic_Impl.h:
        * examples/arch/opensplice/SimpleExample/SimpleComponent_Basic_Impl.cpp:
