@@ -3,9 +3,9 @@
 #ifndef _OPENSPLICE_MODELDDSDATAC_H_
 #define _OPENSPLICE_MODELDDSDATAC_H_
 
+#include "ModelDDSDataC.h"
 #include "cuts/arch/opensplice/OpenSplice_Traits_T.h"
 #include "ddstypes/ModelDDSData_DDSDcps_impl.h"
-#include "ModelDDSDataC.h"
 
 namespace Outer
 {
