@@ -1,0 +1,9 @@
+// $Id$
+
+#include "OpenSplice_SimpleComponentC.h"
+
+
+namespace Example
+{
+}
+
