@@ -1,0 +1,13 @@
+// -*- C++ -*-
+
+#ifndef _OPENSPLICE_SIMPLECOMPONENTC_H_
+#define _OPENSPLICE_SIMPLECOMPONENTC_H_
+
+#include "SimpleComponentC.h"
+
+namespace Example
+{
+}
+
+#endif  // _OPENSPLICE_SIMPLECOMPONENTC_H_
+
